Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-5031

Authorization Action enum does not support upgrades.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.0.0
    • 1.0.0
    • None
    • Mesosphere Sprint 32
    • 2

    Description

      We need to make the Action enum optional in authorization::Request, and add an `UNKNOWN = 0;` enum value. See MESOS-4997 for details.

      Attachments

        Activity

          People

            yongtang Yong Tang
            adam-mesos Adam B
            Adam B Adam B
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: