Made the Action enum optional to support upgrades (MESOS-5031).

This fix makes the Action enum in Authorization optional to support
upgrades. See MESOS-4997 for details.

Review: https://reviews.apache.org/r/45342/